Move CSS to its own file

--- a/resume.html
+++ b/resume.html
@@ -1,183 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <style>
-        body {
-            background-color: white;
-            margin-bottom: 25px;
-        }
-        .title {
-            color: black;
-        }
-        .name {
-            margin-top: 5px;
-            font-size: 25px;
-            text-align: center;
-        }
-        .currentJob span{
-            font-size: 20px;
-            padding: 0px 30px 0px 30px;
-            background-color: white;
-            margin-left: 60%;
-        }
-        .currentJob hr{
-            position: relative;
-            z-index: -1;
-            top: -20px;
-            border-color: black;
-            border-width: 1.5px;
-        }
-        .content {
-            color: black;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-        }
-        .content .one {
-            background-color: white;
-            border-right: 1px solid black;
-            grid-column: 1;
-            text-align: right;
-            padding-right: 15px;
-            margin-left: auto;
-            max-width: 225px;
-        }
-        .content h3 {
-            color:black;
-            padding-top: 3px;
-        }
-        .content .two {
-            background-color: white;
-            max-width: 625px;
-            padding-left: 15px;
-            padding-right: 20px;
-            border-left: 1px solid black;
-            grid-column: 2/4;
-        }
-        .content .two h2 {
-            text-align: center;
-            padding-bottom: 4px;
-            border: 1px solid black;
-        }
-      </style>
-</head>
-<body>
-    <div class="title">
-        <div class="name">
-            <h1>FRANCISCO A. R. VIVAS</h1>
-        </div>
-        <div class="currentJob">
-            <span>Software Egineer</span>
-            <hr/>
-        </div>
-    </div>
-    <div class="content">
-        <div class="one">
-            <div>
-                <h3>CONTACT</h3>
-                <table>
-                    <tr>
-                        <td>false@email.com</td>
-                        <td style="font-size:12px;" class="material-icons icon-image-preview">email</td>
-                    </tr>
-                    <tr>
-                        <td>660 68 62 37</td>
-                        <td style="font-size:12px;" class="material-icons icon-image-preview">phone</td>
-                    </tr>
-                    <tr>
-                        <td>Calle Falsa 123, Aldea en Cabo, TOLEDO. 45908</td>
-                        <td style="font-size:12px;" class="material-icons icon-image-preview">location_on</td>
-                    </tr>
-                </table>
+    <head>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link href="static/css/main.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="title">
+            <div class="name">
+                <h1>FRANCISCO A. R. VIVAS</h1>
             </div>
-            <div>
-                <h3>EDUCATION</h3>
+            <div class="currentJob">
+                <span>Software Egineer</span>
+                <hr/>
+            </div>
+        </div>
+        <div class="content">
+            <div class="one">
                 <div>
-                    <h4>COMPUTER ENGINEER DEGREE</h4>
-                    <p><i>Seville, Andalusia. Sep 2014</i></p>
+                    <h3>CONTACT</h3>
+                    <table>
+                        <tr>
+                            <td>false@email.com</td>
+                            <td style="font-size:12px;" class="material-icons icon-image-preview">email</td>
+                        </tr>
+                        <tr>
+                            <td>660 68 62 37</td>
+                            <td style="font-size:12px;" class="material-icons icon-image-preview">phone</td>
+                        </tr>
+                        <tr>
+                            <td>Calle Falsa 123, Aldea en Cabo, TOLEDO. 45908</td>
+                            <td style="font-size:12px;" class="material-icons icon-image-preview">location_on</td>
+                        </tr>
+                    </table>
                 </div>
                 <div>
-                    <h4>ERASMUS IN UNIVERSITY OF THE WEST</h4>
-                    <p><i>Timișoara, Timiș. Sep 2013</i></p>
+                    <h3>EDUCATION</h3>
+                    <div>
+                        <h4>COMPUTER ENGINEER DEGREE</h4>
+                        <p><i>Seville, Andalusia. Sep 2014</i></p>
+                    </div>
+                    <div>
+                        <h4>ERASMUS IN UNIVERSITY OF THE WEST</h4>
+                        <p><i>Timișoara, Timiș. Sep 2013</i></p>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <h3>COMMUNICATION SKILLS</h3>
-                <p><b>Spanish</b>: Native</p>
-                <p><b>English</b>: Business Level Speaking, Reading, & Writing</p> 
-            </div>
-            <div>
-                <h3>CERTIFICATIONS</h3>
                 <div>
-                    <p>Kubernetes for Developers (LFD259)</p>
+                    <h3>COMMUNICATION SKILLS</h3>
+                    <p><b>Spanish</b>: Native</p>
+                    <p><b>English</b>: Business Level Speaking, Reading, & Writing</p> 
+                </div>
+                <div>
+                    <h3>CERTIFICATIONS</h3>
+                    <div>
+                        <p>Kubernetes for Developers (LFD259)</p>
+                    </div>
+                </div>
+                <div>
+                    <h3>TECHNICAL SKILLS</h3>
+                    <p>GIT</p>
+                    <p>Kubernetes</p>
+                    <p>Jenkins</p>
+                    <p>Docker</p>
+                    <p>Java</p>
+                    <p>Groovy</p>
+                    <p>JavaScript</p>
+                    <p>Python</p>
                 </div>
             </div>
-            <div>
-                <h3>TECHNICAL SKILLS</h3>
-                <p>GIT</p>
-                <p>Kubernetes</p>
-                <p>Jenkins</p>
-                <p>Docker</p>
-                <p>Java</p>
-                <p>Groovy</p>
-                <p>JavaScript</p>
-                <p>Python</p>
+            <div class="two">
+                <h2>PRESENTATION</h2>
+                <div>
+                    <p>I am currently employed as DevOps, and I have become increasingly
+                        interested in using data for process improvement. I came to this field
+                        from Development, and, due both to a personal interest and a team
+                        necessity, I became interested in secure and automated deployment
+                        processes. My current aim is to acquire further knowledge on data
+                        acquisition and management to improve both development and deployment
+                        processes.</p>
+                </div>
+                <h2>EXPERIENCE</h2>
+                <div>
+                    <h4>SOFTWARE ENG.</h4>
+                    <p><i>Capitole Consulting, Barcelona, Catalonia / Mar 2019 - Present</i></p>
+                    <li>
+                        Development of automated and secure processes for hosting with high
+                        administration levels security and combining dedicated servers and
+                        Kubernetes clusters.
+                    </li>
+                </div>
+                <div>
+                    <h4>SOFTWARE ENG.</h4>
+                    <p><i>Tomtom Telematics, Leipzig, Saxony / Mar 2018 - Mar 2019</i></p>
+                    <li>
+                        Start a DevOps team in order to improve the knowledge and
+                        eficiency of each environment from a development perspective.
+                    </li>
+                </div>
+                <div>
+                    <h4>SOFTWARE ENG.</h4>
+                    <p><i>Capitole Consulting, Barcelona, Catalonia / May 2017 - Mar 2018</i></p>
+                    <li>
+                        Microservices development for a large e-commerce company based in
+                        Barcelona.
+                    </li>
+                </div>
+                <div>
+                    <h4>FULL-STACK DEVELOPER</h4>
+                    <p><i>Zentense, Barcelona, Catalonia / Sep 2015 - May 2017</i></p>
+                    <li>
+                        Development of e-commerce for local stores to enable worldwide sales.
+                        Some examples are Totcomic or Sprayplanet.
+                    </li>
+                </div>
+                <div>
+                    <h4>JR SYSTEM ENGINEER</h4>
+                    <p><i>TELEFÓNICA R&D, Barcelona, Catalonia / Sep 2014 - Sep 2015</i></p>
+                    <li>
+                        Management and improvement of machine-generated data and alarm
+                        systems inside R&D.
+                    </li>
+                </div>
             </div>
         </div>
-        <div class="two">
-            <h2>PRESENTATION</h2>
-            <div>
-                <p>I am currently employed as DevOps, and I have become increasingly
-                    interested in using data for process improvement. I came to this field
-                    from Development, and, due both to a personal interest and a team
-                    necessity, I became interested in secure and automated deployment
-                    processes. My current aim is to acquire further knowledge on data
-                    acquisition and management to improve both development and deployment
-                    processes.</p>
-            </div>
-            <h2>EXPERIENCE</h2>
-            <div>
-                <h4>SOFTWARE ENG.</h4>
-                <p><i>Capitole Consulting, Barcelona, Catalonia / Mar 2019 - Present</i></p>
-                <li>
-                    Development of automated and secure processes for hosting with high
-                    administration levels security and combining dedicated servers and
-                    Kubernetes clusters.
-                </li>
-            </div>
-            <div>
-                <h4>SOFTWARE ENG.</h4>
-                <p><i>Tomtom Telematics, Leipzig, Saxony / Mar 2018 - Mar 2019</i></p>
-                <li>
-                    Start a DevOps team in order to improve the knowledge and
-                    eficiency of each environment from a development perspective.
-                </li>
-            </div>
-            <div>
-                <h4>SOFTWARE ENG.</h4>
-                <p><i>Capitole Consulting, Barcelona, Catalonia / May 2017 - Mar 2018</i></p>
-                <li>
-                    Microservices development for a large e-commerce company based in
-                    Barcelona.
-                </li>
-            </div>
-            <div>
-                <h4>FULL-STACK DEVELOPER</h4>
-                <p><i>Zentense, Barcelona, Catalonia / Sep 2015 - May 2017</i></p>
-                <li>
-                    Development of e-commerce for local stores to enable worldwide sales.
-                    Some examples are Totcomic or Sprayplanet.
-                </li>
-            </div>
-            <div>
-                <h4>JR SYSTEM ENGINEER</h4>
-                <p><i>TELEFÓNICA R&D, Barcelona, Catalonia / Sep 2014 - Sep 2015</i></p>
-                <li>
-                    Management and improvement of machine-generated data and alarm
-                    systems inside R&D.
-                </li>
-            </div>
-        </div>
-    </div>
-</body>
+    </body>
 </html>
