--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
                 <h1>FRANCISCO A. R. VIVAS</h1>
             </div>
             <div class="currentJob">
-                <span>Software Egineer</span>
+                <span>Software Engineer</span>
                 <hr/>
             </div>
         </div>
@@ -70,18 +70,28 @@
             <div class="two">
                 <h2>PRESENTATION</h2>
                 <div>
-                    <p>I am currently employed as DevOps, and I have become increasingly
-                        interested in using data for process improvement. I came to this field
-                        from Development, and, due both to a personal interest and a team
-                        necessity, I became interested in secure and automated deployment
-                        processes. My current aim is to acquire further knowledge on data
-                        acquisition and management to improve both development and deployment
-                        processes.</p>
+                    <p>I am currently employed as DevOps, although I know my
+                        job is more similar to SRE. While I have a Development
+                        background focused in Backend I am able to review, fix
+                        and improve in Frontend as well. Back then, I switched
+                        to this field to make more visible all monitoring,
+                        deployment and testing performance tasks.
+                        Now I'm doing it from the inside.</p>
                 </div>
                 <h2>EXPERIENCE</h2>
                 <div>
                     <h4>SOFTWARE ENG.</h4>
-                    <p><i>Capitole Consulting, Barcelona, Catalonia / Mar 2019 - Present</i></p>
+                    <p><i>Cegedim, Barcelona, Catalonia / Mar 2020 - Present</i></p>
+                    <li>
+                        Migration planning from static servers into a Kubernetes
+                        structure. Docker, pipelines and deployment standardization
+                        through multiple company services. Development of solutions
+                        within these areas.
+                    </li>
+                </div>
+                <div>
+                    <h4>SOFTWARE ENG.</h4>
+                    <p><i>Capitole Consulting, Barcelona, Catalonia / Mar 2019 - Mar 2020</i></p>
                     <li>
                         Development of automated and secure processes for hosting with high
                         administration levels security and combining dedicated servers and
