Add CKAD to resume

--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@
                 <div>
                     <h3>CERTIFICATIONS</h3>
                     <div>
-                        <p>Kubernetes for Developers (LFD259)</p>
+                        <p>Kubernetes Application Developer (<a href="https://www.credly.com/badges/3a7ce02d-3372-476e-a86d-8c8c6385e97f">CKAD</a>)</p>
                     </div>
                 </div>
                 <div>
