--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <body>
         <div class="title">
             <div class="name">
-                <h1>FRANCISCO A. R. VIVAS</h1>
+                <h1>FRANCISCO A. RODRÍGUEZ VIVAS</h1>
             </div>
             <div class="currentJob">
                 <span>Software Engineer</span>
@@ -48,6 +48,7 @@
                     <h3>COMMUNICATION SKILLS</h3>
                     <p><b>Spanish</b>: Native</p>
                     <p><b>English</b>: Business Level Speaking, Reading, & Writing</p> 
+                    <p><b>French</b>: Basic Level Speaking, Reading, & Writing</p> 
                 </div>
                 <div>
                     <h3>CERTIFICATIONS</h3>
@@ -59,10 +60,11 @@
                     <h3>TECHNICAL SKILLS</h3>
                     <p>GIT</p>
                     <p>Kubernetes</p>
-                    <p>Jenkins</p>
+                    <p>Helm</p>
+                    <p>GitLab/Bitbucket</p>
+                    <p>Jenkins (Groovy)</p>
                     <p>Docker</p>
                     <p>Java</p>
-                    <p>Groovy</p>
                     <p>JavaScript</p>
                     <p>Python</p>
                 </div>
@@ -70,65 +72,70 @@
             <div class="two">
                 <h2>PRESENTATION</h2>
                 <div>
-                    <p>I am currently employed as DevOps, although I know my
-                        job is more similar to SRE. While I have a Development
+                    <p>I am currently employed as "DevOps", although I know this
+                        should be just a philosophy. While I have a Development
                         background focused in Backend I am able to review, fix
                         and improve in Frontend as well. Back then, I switched
                         to this field to make more visible all monitoring,
                         deployment and testing performance tasks.
-                        Now I'm doing it from the inside.</p>
+                        Now I'm doing my best to provide it from the inside.</p>
                 </div>
                 <h2>EXPERIENCE</h2>
                 <div>
                     <h4>SOFTWARE ENG.</h4>
-                    <p><i>Cegedim, Barcelona, Catalonia / Mar 2020 - Present</i></p>
-                    <li>
-                        Migration planning from static servers into a Kubernetes
-                        structure. Docker, pipelines and deployment standardization
+                    <p><i>Cegedim, Mar 2020 - Present</i></p>
+                    <p>
+                        Migration from static servers into Kubernetes clusters.
+                        The process is still going but mostly completed.
+                        We followed an Environment as Code approach using Helm.
+                        Docker, pipelines and deployment standardization
                         through multiple company services. Development of solutions
                         within these areas.
-                    </li>
+                    </p>
                 </div>
                 <div>
                     <h4>SOFTWARE ENG.</h4>
-                    <p><i>Capitole Consulting, Barcelona, Catalonia / Mar 2019 - Mar 2020</i></p>
+                    <p><i>Capitole Consulting, May 2017 - Mar 2020</i></p>
+                    <p>
+                        As a consulting company, I performed different roles in different
+                        clients. Here is the description of roles and actions performed in
+                        them:
+                    </p>
                     <li>
-                        Development of automated and secure processes for hosting with high
-                        administration levels security and combining dedicated servers and
-                        Kubernetes clusters.
+                        ADP: Development of automated and secure
+                        processes for hosting with high administration levels security and
+                        combining dedicated servers and Kubernetes clusters.
+                    </li>
+                    <li>
+                        TomTom Webfleet Solution: Beginnings of a DevOps team
+                        in order to improve the knowledge and eficiency of each environment
+                        from a development perspective.
+                    </li>
+                    <li>
+                        Privalia: Migration from monolith to microservices
+                        using Springboot and React. Here I started to use Docker, Spinnaker
+                        and a little of Terraform to put all this services into production.
+                        This was my first contact with DevOps philosphy.
                     </li>
                 </div>
                 <div>
-                    <h4>SOFTWARE ENG.</h4>
-                    <p><i>Tomtom Telematics, Leipzig, Saxony / Mar 2018 - Mar 2019</i></p>
-                    <li>
-                        Start a DevOps team in order to improve the knowledge and
-                        eficiency of each environment from a development perspective.
-                    </li>
-                </div>
-                <div>
-                    <h4>SOFTWARE ENG.</h4>
-                    <p><i>Capitole Consulting, Barcelona, Catalonia / May 2017 - Mar 2018</i></p>
-                    <li>
-                        Microservices development for a large e-commerce company based in
-                        Barcelona.
-                    </li>
-                </div>
-                <div>
-                    <h4>FULL-STACK DEVELOPER</h4>
-                    <p><i>Zentense, Barcelona, Catalonia / Sep 2015 - May 2017</i></p>
-                    <li>
-                        Development of e-commerce for local stores to enable worldwide sales.
-                        Some examples are Totcomic or Sprayplanet.
-                    </li>
+                    <h4>JR FULL-STACK DEVELOPER</h4>
+                    <p><i>Zentense, Sep 2015 - May 2017</i></p>
+                    <p>
+                        Development of online sales platforms for events and local stores
+                        to enable worldwide sales. Some examples are Totcomic, Sprayplanet,
+                        In-edit or Sonar. Most of the development were done using JavaScript
+                        and Scala, but using their own custom frameworks.
+                    </p>
                 </div>
                 <div>
                     <h4>JR SYSTEM ENGINEER</h4>
-                    <p><i>TELEFÓNICA R&D, Barcelona, Catalonia / Sep 2014 - Sep 2015</i></p>
-                    <li>
+                    <p><i>TELEFÓNICA R&D, Sep 2014 - Sep 2015</i></p>
+                    <p>
                         Management and improvement of machine-generated data and alarm
-                        systems inside R&D.
-                    </li>
+                        systems inside R&D. Here I learnt about Icinga, Splunk and
+                        similar tools.
+                    </p>
                 </div>
             </div>
         </div>
