--- a/resume.html
+++ b/resume.html
@@ -61,24 +61,28 @@
                     <p>GIT</p>
                     <p>Kubernetes</p>
                     <p>Helm</p>
+                    <p>Docker</p>
                     <p>GitLab/Bitbucket</p>
                     <p>Jenkins (Groovy)</p>
-                    <p>Docker</p>
                     <p>Java</p>
                     <p>JavaScript</p>
                     <p>Python</p>
+                    <p>Rust (throw <a href="https://exercism.org/profiles/farv">Exercism</a>)</p>
                 </div>
             </div>
             <div class="two">
                 <h2>PRESENTATION</h2>
                 <div>
-                    <p>I am currently employed as "DevOps", although I know this
+                    <p>
+                        I am currently employed as DevOps, although I know this
                         should be just a philosophy. While I have a Development
                         background focused in Backend I am able to review, fix
                         and improve in Frontend as well. Back then, I switched
-                        to this field to make more visible all monitoring,
-                        deployment and testing performance tasks.
-                        Now I'm doing my best to provide it from the inside.</p>
+                        to this field to make more visible from development teams
+                        all monitoring, deployment and testing performance tasks.
+                        Now I'm doing my best to provide it from the inside.
+                        I'm also learning Rust on my spare time.
+                    </p>
                 </div>
                 <h2>EXPERIENCE</h2>
                 <div>
@@ -86,11 +90,13 @@
                     <p><i>Cegedim, Mar 2020 - Present</i></p>
                     <p>
                         Migration from static servers into Kubernetes clusters.
-                        The process is still going but mostly completed.
-                        We followed an Environment as Code approach using Helm.
-                        Docker, pipelines and deployment standardization
-                        through multiple company services. Development of solutions
-                        within these areas.
+                        We have used Helm to provide an Environment as code package.
+                        I'm also doing my part with Docker, pipelines (migration
+                        from Jenkins to GitlabCI) and deployment process standardization
+                        through multiple company services.
+                        We keep an eye on Dynatrace, graphana and Kibana, and help
+                        development teams with dashboards that help them understand
+                        better what's happening in their sevices.
                     </p>
                 </div>
                 <div>
