--- a/resume.html
+++ b/resume.html
@@ -67,7 +67,7 @@
                     <p>Java</p>
                     <p>JavaScript</p>
                     <p>Python</p>
-                    <p>Rust (throw <a href="https://exercism.org/profiles/farv">Exercism</a>)</p>
+                    <p>Rust (through <a href="https://exercism.org/profiles/farv">Exercism</a>)</p>
                 </div>
             </div>
             <div class="two">
