Add feedback from a hiring process

--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
                 <h1>FRANCISCO A. RODRÍGUEZ VIVAS</h1>
             </div>
             <div class="currentJob">
-                <span>Software Engineer</span>
+                <span>Sr. Software Engineer</span>
                 <hr/>
             </div>
         </div>
@@ -53,21 +53,26 @@
                 <div>
                     <h3>CERTIFICATIONS</h3>
                     <div>
-                        <p>Kubernetes Application Developer (<a href="https://www.credly.com/badges/3a7ce02d-3372-476e-a86d-8c8c6385e97f">CKAD</a>)</p>
+                        <p>Kubernetes: <a href="https://www.credly.com/badges/3a7ce02d-3372-476e-a86d-8c8c6385e97f">CKAD</a></p>
                     </div>
                 </div>
                 <div>
                     <h3>TECHNICAL SKILLS</h3>
-                    <p>GIT</p>
+                    <p>GIT (GitLab/Bitbucket)</p>
                     <p>Kubernetes</p>
                     <p>Helm</p>
                     <p>Docker</p>
-                    <p>GitLab/Bitbucket</p>
                     <p>Jenkins (Groovy)</p>
                     <p>Java</p>
                     <p>JavaScript</p>
-                    <p>Python</p>
+                    <p>Python & Bash</p>
                     <p>Rust (through <a href="https://exercism.org/profiles/farv">Exercism</a>)</p>
+                </div>
+                <div>
+                    <h3>SOFT SKILLS</h3>
+                    <p>Self Management</p>
+                    <p>Mentoring</p>
+                    <p>Team work</p>
                 </div>
             </div>
             <div class="two">
@@ -86,7 +91,7 @@
                 </div>
                 <h2>EXPERIENCE</h2>
                 <div>
-                    <h4>SOFTWARE ENG.</h4>
+                    <h4>SR. SOFTWARE ENGINEER</h4>
                     <p><i>Cegedim, Mar 2020 - Present</i></p>
                     <p>
                         Migration from static servers into Kubernetes clusters.
@@ -98,30 +103,45 @@
                         development teams with dashboards that help them understand
                         better what's happening in their sevices.
                     </p>
+                    <li style="padding-left: 2%; list-style-type: circle;">
+                        <b>Tools:</b>
+                        Helm, Git(Gitlab), K8s, Sonarqube, Dynatrace, ELK, Jenkins
+                    </li>
                 </div>
                 <div>
                     <h4>SOFTWARE ENG.</h4>
                     <p><i>Capitole Consulting, May 2017 - Mar 2020</i></p>
                     <p>
-                        As a consulting company, I performed different roles in different
-                        clients. Here is the description of roles and actions performed in
-                        them:
+                        I was outsourcered in the next projects:
                     </p>
+                    
                     <li>
-                        ADP: Development of automated and secure
+                        <b>ADP</b>: Development of automated and secure
                         processes for hosting with high administration levels security and
                         combining dedicated servers and Kubernetes clusters.
+                        <li style="padding-left: 2%; list-style-type: circle;">
+                            <b>Tools:</b>
+                            K8s, Jenkins, DotNet3.1, MSBuild
+                        </li>
                     </li>
                     <li>
-                        TomTom Webfleet Solution: Beginnings of a DevOps team
+                        <b>TomTom Webfleet Solution</b>: Beginnings of a DevOps team
                         in order to improve the knowledge and eficiency of each environment
                         from a development perspective.
+                        <li style="padding-left: 2%; list-style-type: circle;">
+                            <b>Tools:</b>
+                            Puppet, Gitlab
+                        </li>
                     </li>
                     <li>
-                        Privalia: Migration from monolith to microservices
+                        <b>Privalia</b>: Migration from monolith to microservices
                         using Springboot and React. Here I started to use Docker, Spinnaker
                         and a little of Terraform to put all this services into production.
                         This was my first contact with DevOps philosphy.
+                        <li style="padding-left: 2%; list-style-type: circle;">
+                            <b>Tools:</b>
+                            Springboot, Java, React, JavaScript, Terraform, AWS
+                        </li>
                     </li>
                 </div>
                 <div>
