Modify some designs

--- a/resume.html
+++ b/resume.html
@@ -15,9 +15,9 @@
             </div>
         </div>
         <div class="content">
-            <div class="one">
+            <div class="leftside">
                 <div>
-                    <h3>CONTACT</h3>
+                    <h3><u>CONTACT:</u></h3>
                     <table>
                         <tr>
                             <td>false@email.com</td>
@@ -34,7 +34,7 @@
                     </table>
                 </div>
                 <div>
-                    <h3>EDUCATION</h3>
+                    <h3><u>EDUCATION:</u></h3>
                     <div>
                         <h4>COMPUTER ENGINEER DEGREE</h4>
                         <p><i>Seville, Andalusia. Sep 2014</i></p>
@@ -45,19 +45,19 @@
                     </div>
                 </div>
                 <div>
-                    <h3>COMMUNICATION SKILLS</h3>
+                    <h3><u>LANGUAGES SKILLS:</u></h3>
                     <p><b>Spanish</b>: Native</p>
                     <p><b>English</b>: Business Level Speaking, Reading, & Writing</p> 
                     <p><b>French</b>: Basic Level Speaking, Reading, & Writing</p> 
                 </div>
                 <div>
-                    <h3>CERTIFICATIONS</h3>
+                    <h3><u>CERTIFICATIONS:</u></h3>
                     <div>
                         <p>Kubernetes: <a href="https://www.credly.com/badges/3a7ce02d-3372-476e-a86d-8c8c6385e97f">CKAD</a></p>
                     </div>
                 </div>
                 <div>
-                    <h3>TECHNICAL SKILLS</h3>
+                    <h3><u>TECHNICAL SKILLS:</u></h3>
                     <p>GIT (GitLab/Bitbucket)</p>
                     <p>Kubernetes</p>
                     <p>Helm</p>
@@ -69,13 +69,13 @@
                     <p>Rust (through <a href="https://exercism.org/profiles/farv">Exercism</a>)</p>
                 </div>
                 <div>
-                    <h3>SOFT SKILLS</h3>
+                    <h3><u>SOFT SKILLS:</u></h3>
                     <p>Self Management</p>
                     <p>Mentoring</p>
                     <p>Team work</p>
                 </div>
             </div>
-            <div class="two">
+            <div class="rightside">
                 <h2>PRESENTATION</h2>
                 <div>
                     <p>
@@ -90,7 +90,7 @@
                     </p>
                 </div>
                 <h2>EXPERIENCE</h2>
-                <div>
+                <div class="job">
                     <h4>SR. SOFTWARE ENGINEER</h4>
                     <p><i>Cegedim, Mar 2020 - Present</i></p>
                     <p>
@@ -103,48 +103,49 @@
                         development teams with dashboards that help them understand
                         better what's happening in their sevices.
                     </p>
-                    <li style="padding-left: 2%; list-style-type: circle;">
+                    <li class="tools">
                         <b>Tools:</b>
                         Helm, Git(Gitlab), K8s, Sonarqube, Dynatrace, ELK, Jenkins
                     </li>
                 </div>
-                <div>
+                <div class="job">
                     <h4>SOFTWARE ENG.</h4>
                     <p><i>Capitole Consulting, May 2017 - Mar 2020</i></p>
                     <p>
-                        I was outsourcered in the next projects:
+                        I was outsourcered in the next projects. Here is the description
+                        and tools that I used to use there:
                     </p>
                     
                     <li>
                         <b>ADP</b>: Development of automated and secure
                         processes for hosting with high administration levels security and
                         combining dedicated servers and Kubernetes clusters.
-                        <li style="padding-left: 2%; list-style-type: circle;">
+                    </li>
+                    <li class="tools">
                             <b>Tools:</b>
                             K8s, Jenkins, DotNet3.1, MSBuild
-                        </li>
                     </li>
                     <li>
                         <b>TomTom Webfleet Solution</b>: Beginnings of a DevOps team
                         in order to improve the knowledge and eficiency of each environment
                         from a development perspective.
-                        <li style="padding-left: 2%; list-style-type: circle;">
+                    </li>
+                    <li class="tools">
                             <b>Tools:</b>
                             Puppet, Gitlab
-                        </li>
                     </li>
                     <li>
                         <b>Privalia</b>: Migration from monolith to microservices
                         using Springboot and React. Here I started to use Docker, Spinnaker
                         and a little of Terraform to put all this services into production.
                         This was my first contact with DevOps philosphy.
-                        <li style="padding-left: 2%; list-style-type: circle;">
+                    </li>
+                    <li class="tools">
                             <b>Tools:</b>
                             Springboot, Java, React, JavaScript, Terraform, AWS
-                        </li>
                     </li>
                 </div>
-                <div>
+                <div class="job">
                     <h4>JR FULL-STACK DEVELOPER</h4>
                     <p><i>Zentense, Sep 2015 - May 2017</i></p>
                     <p>
@@ -154,7 +155,7 @@
                         and Scala, but using their own custom frameworks.
                     </p>
                 </div>
-                <div>
+                <div class="job">
                     <h4>JR SYSTEM ENGINEER</h4>
                     <p><i>TELEFÓNICA R&D, Sep 2014 - Sep 2015</i></p>
                     <p>
